Added working AppList

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,31 +12,30 @@
 
 <div class="MainContentContainer">
     <center>
-        <h1 class="header retype">Header</h1>
+        <h1 class="header">Header</h1>
         <!--
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br>
 
+        <p><u class="Uheader">Python</u></p>
+
+        <p style="" class="infoText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
+        <br><br><br>
+
+        <p><u class="Uheader">Java</u></p>
+
+        <p style="" class="infoText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
     </center>
 
 </div>
 
 <div class="ProgrammActivityList">
+    <p style="padding:0px; margin:0px; margin-top: 10px; margin-left: 10px;"><u>Projects</u></p>
     <ul>
-        <li>
-            <div>
-                <span>Anusmühle</span><br>
-                <span class="retype onstate" style="color: red;">🍎offline</span>
-            </div>
-        </li>
-        <li>
-            <div>
-                <span>Knechtschäler</span><br>
-                <span class="retype onstate" style="color: green;">🍏online</span>
-            </div>
-        </li>
+        {{PY_ON_SERVICES}}
 
     </ul>
 
