--- a/static/public/style.css
+++ b/static/public/style.css
@@ -12,8 +12,21 @@ body{
     font-size: 120%;
 }
 
+.infoText {
+    font-size: 150%;
+}
+
+.Uheader{
+    font-family: "Oswald";
+    font-size: 200%;
+}
+
 .header{
     font-family: "Oswald";
+}
+
+.ProjectName{
+    text-decoration: none;
 }
 
 .onstate{
@@ -30,8 +43,10 @@ body{
     border-color: darkgray;
     background-color: lightgray;
     margin-top: 10px;
-
+    padding-left: 10px;
+    padding-right: 10px;
 }
+
 .ProgrammActivityList ul{
     list-style-type: none;
     margin: 0px;
@@ -47,6 +62,7 @@ body{
     background-color: rgba(255, 255, 255, 0.8);
     /*height: 100%;*/
     border-radius: 10px;
+    padding: 5%;
 
 }
 
