--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>No-Hub</title>
-    <link rel="stylesheet" href="/static/public/style.css">
+    <link rel="stylesheet" href="/static/public/styles/style.css">
+    <link rel="stylesheet" href="/static/public/styles/hover.css">  <!--class="hvr-shrink"-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Roboto&display=swap" rel="stylesheet">
     <!--<meta http-equiv="refresh" content="2">-->
@@ -12,7 +13,7 @@
 
 <div class="MainContentContainer">
     <center>
-        <h1 class="header">Header</h1>
+        <h1 class="header" >--Experience--</h1>
         <!--
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
@@ -36,12 +37,39 @@
     <p style="padding:0px; margin:0px; margin-top: 10px; margin-left: 10px;"><u>Projects</u></p>
     <ul>
         {{PY_ON_SERVICES}}
-
     </ul>
-
-
 </div>
 
+
+<!--
+Experience:
+
+Java:
+-Online Socket Connnections
+I started programming network Appications 200
+-Discord Bots
+-2D Games (Card Game)
+
+
+Python:
+-Basic Python
+-Selenium
+-Flask WebServers
+
+-(SQL)
+
+Web:
+-html
+-css
+-js
+
+
+Microcontroller Programming:
+-Arduino
+-ESP32
+
+Raspberry Pi:
+-->
 
 <script src="/static/public/scripts/textWriter.js" type="text/javascript"></script>
 
