AppList fixed and Content start

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,13 @@
 
 <div class="MainContentContainer">
     <center>
+        <h1 class="header" >--Introduction--</h1>
+        <p class="infoText">
+            Hello and welcome, or as we say in germany "Moin Meister"!<br>
+            Here will be more infomation soon, or not...
+        </p>
+
+        <br><br>
         <h1 class="header" >--Experience--</h1>
         <!--
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -26,6 +33,13 @@
         <br><br><br>
 
         <p><u class="Uheader">Java</u></p>
+
+        <p class="nanoHeader">Socket Programming</p>
+        <p>asd</p>
+        <p class="nanoHeader">2D Games</p>
+        <p>awd</p>
+        <p class="nanoHeader">Discord Bots (JDA)</p>
+        <p>asd</p>
 
         <p style="" class="infoText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
@@ -45,7 +59,7 @@
 Experience:
 
 Java:
--Online Socket Connnections
+-Socket Programming
 I started programming network Appications 200
 -Discord Bots
 -2D Games (Card Game)
