--- a/static/public/styles/style.css
+++ b/static/public/styles/style.css
@@ -1,6 +1,3 @@
-
-
-
 body{
     background-image: url("/static/public/CodeBlur.png");
 
@@ -31,12 +28,18 @@ body{
     text-decoration: none;
 }
 
+.nanoHeader{
+    margin-right: 90%;
+}
+
 .onstate{
 
 }
 
 .ProgrammActivityList{
-    float: right;
+    position: fixed;
+    right: 2%;
+    /*float: right;*/
     background-color: white;
     margin: 0px;
     padding: 0px;
