--- a/templates/index.html
+++ b/templates/index.html
@@ -29,44 +29,62 @@
         <h1 class="header" >--Experience--</h1>
 
         <br><br>
-
-        <p><u class="Uheader">Python</u></p>
-
-        <p style="" class="infoText">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-            duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-
-        <br><br><br>
-
-        <p><u class="Uheader">Java</u></p>
-
-        <p class="nanoHeader">Socket Programming</p>
-        <p>asd</p>
-        <p class="nanoHeader">2D Games</p>
-        <p>awd</p>
-        <p class="nanoHeader">Discord Bots (JDA)</p>
-        <p>asd</p>
-
-        <p data-toggle="collapse" data-target="#oit1" class="hvr-grow hideheader"><u>Open/Close</u></p>
-        <p style="" class="infoText collapse" id="oit1">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-            duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
-
-
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
     </center>
+
+
+    {{PY_EXPERIENCE_SECTION}}
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+    <!--
+    <p><u class="Uheader">Python</u></p>
+
+    <p><u class="Uheader">Java</u></p>
+
+    <p data-toggle="collapse" data-target="#Section_socketProgramming" class="hvr-grow hideheader"><u>Socket Programming</u></p><br>
+    <div class="infoText collapse openSection" id="Section_socketProgramming">
+        <p data-toggle="collapse" data-target="#Section_socketProgramming_what" class="hvr-grow"><u>What is socket programming?</u></p><br>
+        <div id="Section_socketProgramming_what" class="collapse">Sockets are a way of transferring information over the Internet with the TCP protocol.<br></div>
+
+        <p data-toggle="collapse" data-target="#Section_socketProgramming_use" class="hvr-grow"><u>Where did you use socket programming before?</u></p><br>
+        <div id="Section_socketProgramming_use" class="collapse">In some projects you little shit!<br></div>
+    </div>
+
+    <p data-toggle="collapse" data-target="#Section_2DGames" class="hvr-grow hideheader"><u>2D Games</u></p><br>
+    <div class="infoText collapse openSection" id="Section_2DGames">
+        <p data-toggle="collapse" data-target="#Section_2DGames_example" class="hvr-grow"><u>Examples for games?</u></p><br>
+        <div id="Section_2DGames_example" class="collapse in">
+            <p>
+                CardGame, ModGame, NoNameGame
+            </p>
+            <br>
+        </div>
+    </div>
+
+    <p data-toggle="collapse" data-target="#Section_DiscordBots" class="hvr-grow hideheader"><u>Discord Bots (JDA)</u></p><br>
+    <div class="infoText collapse openSection" id="Section_DiscordBots">
+        <p data-toggle="collapse" data-target="#Section_DiscordBots_what_DC" class="hvr-grow"><u>What is Discord?</u></p><br>
+        <div id="Section_DiscordBots_what_DC" class="collapse">
+            <p>
+                Discord is an app, where you can talk or write with other people just like an online meeting.
+            </p>
+            <br>
+        </div>
+        <p data-toggle="collapse" data-target="#Section_DiscordBots_what_DC_Bots" class="hvr-grow"><u>What is a Discord bot?</u></p><br>
+        <div id="Section_DiscordBots_what_DC_Bots" class="collapse">
+            <p>
+                Under a discord bot you understand a program, that connects to the discord server and remote controlls an user over an API (In this case the Java Discord APT (JDA)).
+                <br>
+                This remotely controlled account can then perform actions to manage the users.
+            </p>
+            <br>
+        </div>
+    </div>
+
 
 </div>
 
@@ -78,7 +96,7 @@
 </div>
 
 
-<!--
+
 Experience:
 
 Java:
@@ -95,7 +113,7 @@ Python:
 
 -(SQL)
 
-Web:
+Web Development:
 -html
 -css
 -js
@@ -105,7 +123,7 @@ Microcontroller Programming:
 -Arduino
 -ESP32
 
-Raspberry Pi:
+!!!Raspberry Pi:
 -->
 
 <script src="/static/public/scripts/textWriter.js" type="text/javascript"></script>
