--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <h1 class="header" >--Introduction--</h1>
         <p class="infoText">
             Hello and welcome, or as we say in germany "Moin Meister"!<br>
-            Here will be more infomation soon, or not...
+            My name is Leon and I initially started programming Java in 2015.
         </p>
 
         <br><br>
@@ -34,10 +34,31 @@
 
     {{PY_EXPERIENCE_SECTION}}
 
+    <!--
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    -->
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="contactBox">
+        <center>
+           <img src="https://github.com/fluidicon.png" class='contactLink mousepointer' onclick="document.location='https://github.com/noname28439'" title="Github">
+        </center>
+    </div>
+</div>
+
+
+<div class="ProgrammActivityList" style="font-size: 150%;">
+    <p style="padding:0px; margin:0px; margin-top: 10px; margin-left: 10px; font-size: 200%;"><u>Projects</u></p>
+    <ul>
+        {{PY_ON_SERVICES}}
+    </ul>
+</div>
+
+
+
+
 
 
     <!--
@@ -85,17 +106,12 @@
         </div>
     </div>
 
-
-</div>
-
-<div class="ProgrammActivityList" style="font-size: 150%;">
-    <p style="padding:0px; margin:0px; margin-top: 10px; margin-left: 10px; font-size: 200%;"><u>Projects</u></p>
-    <ul>
-        {{PY_ON_SERVICES}}
-    </ul>
-</div>
+-->
 
 
+
+
+<!--
 
 Experience:
 
