--- a/static/public/styles/style.css
+++ b/static/public/styles/style.css
@@ -6,7 +6,7 @@ body{
     background-size: cover;
     background-attachment: fixed;
 
-    font-family: "Roboto";
+    font-family: "Nunito";  /*"Roboto"*/
     font-size: 120%;
 }
 
