--- a/static/public/styles/style.css
+++ b/static/public/styles/style.css
@@ -10,6 +10,19 @@ body{
     font-size: 120%;
 }
 
+.textlink{
+color: rgb(0, 204, 255)
+}
+
+.contactButton{
+    margin-left: 20px;
+    font-size: 150%;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    border-radius: 5px;
+}
+
 .contactLink{
     border-radius: 50%;
     width: 75px;
@@ -80,6 +93,7 @@ body{
     margin-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 150%;
 }
 
 .ProgrammActivityList ul{
@@ -109,7 +123,14 @@ body{
     }
 
     .ProgrammActivityList{
-        bottom: 3%;
+        position: relative;
+        text-align: center;
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-bottom: 50px;
+        border-width: 0px;
+        background-color: rgba(255, 255, 255, 0);
     }
+
 }
 
