--- a/templates/index.html
+++ b/templates/index.html
@@ -23,19 +23,54 @@
 </head>
 <body>
 
+
+
 <script src="/static/public/scripts/backgroundMover.js" type="text/javascript"></script>
 <script src="/static/public/scripts/easteregg.js"></script>
 
+<script>
+    function openAllPoints() {
+        let section = document.getElementById("experienceSection");
+        let iteration = 0;
+        let parentlist = section.childNodes;
+        while(iteration<2){
+            iteration+=1;
+            let newParentList = []
+            for(ci in parentlist){
+                let parent = parentlist[ci];
+                if(parent.className === undefined)
+                    continue;
+                parent.click();
+                let childs = parent.childNodes;
+                for(cc in childs)
+                    newParentList.push(childs[cc]);
+            }
+            parentlist = newParentList;
+        }
+    }
+</script>
+
+<br>
 <div class="MainContentContainer">
+
+    <div class="ProgrammActivityList">
+        <p style="padding:0px; margin:0px; margin-top: 10px; margin-left: 10px; font-size: 200%;"><u onclick="spawn(true)";>Projects</u></p>
+        <ul>
+            {{PY_ON_SERVICES}}
+        </ul>
+    </div>
+
     <center>
         <h1 class="header" >--Introduction--</h1><br>
         <p class="infoText">
-            Hello and welcome, or as we say in germany "Moin Meister"!<br>
-            My name is Leon and I initially started programming Java in 2015.<br>
-            From there on I started gathering as much knowledge as I could.<br>
+            Hello and welcome to this small website!<br>
+            My name is Leon and I initially started programming Java in 2015. <br>
+            This pages purpose is just to show what I have done since then. <br>
             So you can find a list of the things I worked with in the last years down below. <br>
-            <span style="color: darkgray;" class="mousepointer hvr-bounce-in" onclick="let elementList = document.getElementsByClassName('openclickExample'); for(e in elementList){elementList[e].click()}">(click them)</span>
+            <span style="color: darkgray;" class="mousepointer hvr-bounce-in" onclick="let elementList = document.getElementsByClassName('openclickExample'); for(e in elementList){elementList[e].click()}">(Tipp: click them)</span>
+            <br>:D
         </p>
+
 
         <br><br>
         <h1 class="header">--Experience--</h1>
@@ -43,30 +78,48 @@
         <br><br>
     </center>
 
+    <div id="experienceSection">
+        {{PY_EXPERIENCE_SECTION}}
+    </div>
+    <center>
+        <br><br>
+        <span style="color: darkgray; font-size: 200%;" class="mousepointer hvr-bounce-in" onclick="openAllPoints();">(toggle all)</span>
+    </center>
 
-    {{PY_EXPERIENCE_SECTION}}
 
-    <!--
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    -->
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     <div class="contactBox">
         <center>
-           <img src="https://github.com/fluidicon.png" class='contactLink mousepointer hvr-bounce-in' onclick="document.location='https://github.com/noname28439'" title="Github">
+           <img src="https://github.com/fluidicon.png" class='contactLink mousepointer hvr-bounce-in' onclick="document.location='https://github.com/noname28439'" title="my github">
         </center>
     </div>
+
+
+
+<br><br>
+    <div id="contactSection">
+        <p style="margin:0px; padding: 0px; font-size: 150%;">Contact</p>
+        <hr style="margin:0px; padding: 0px; margin-bottom: 20px;">
+        <div id="contactButtons">
+            <button class="hvr-bounce-to-right contactButton" title="Noname#5409"><a onclick="alert('Noname#5409');">Discord</a></button>
+            <button class="hvr-bounce-to-right contactButton" title="nonameinfo@gmx.de"><a href="mailto:nonameinfo@gmx.de">Email</a></button>
+            <!--<button class="hvr-bounce-to-right contactButton" title="noname28439"><a href="https://github.com/noname28439/">Github</a></button>-->
+        </div>
+    </div>
+
+    <br><br><br><br>
+
+    <!----->
+    <br><br><br><br>
+
+    <center>
+        <p>please keep in mind, that this is still a demo version!</p>
+    </center>
+
 </div>
 
 
-<div class="ProgrammActivityList" style="font-size: 150%;">
-    <p style="padding:0px; margin:0px; margin-top: 10px; margin-left: 10px; font-size: 200%;"><u onclick="spawn(true)";>Projects</u></p>
-    <ul>
-        {{PY_ON_SERVICES}}
-    </ul>
-</div>
+
 
 <script>
 function showFullScreen(element) {
@@ -81,6 +134,11 @@ function showFullScreen(element) {
     <img id="img01" style="width:100%">
   </div>
 </div>
+
+
+
+
+
 
 <!--
 
@@ -114,6 +172,8 @@ Microcontroller Programming:
 -->
 
 <script src="/static/public/scripts/textWriter.js" type="text/javascript"></script>
+
+
 
 </body>
 </html>
